# retra

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: LATEST.md  bench_hot_path.py  smoke_benchmark.py
docs/: api.md  architecture.md  backends.md  benchmarks.md  concurrency.md  index.md  migration.md  performance.md  persistence.md  precision.md  security.md  serialization.md
docs/examples/: trading.md
docs/guides/: error_handling.md
docs/i18n/: overview-pt-br.md
docs/reference/: api.md
examples/: async_cache.py  basic_cache.py  compiled_function.py  custom_key.py  file_cache.py  function_cache.py  generations.py  persistent_sqlite.py  sqlite_cache.py  tiered_cache.py  trading_style.py
src/retra/: __init__.py  async_cache.py  cache.py  config.py  constants.py  decorators.py  entry.py  exceptions.py  generation.py  keys.py  protocols.py  records.py  stats.py
src/retra/backends/: __init__.py  file.py  memory.py  sqlite.py
src/retra/compiler/: __init__.py  call_plan.py  signatures.py  wrapper.py
src/retra/concurrency/: __init__.py  async_gate.py  miss_gate.py
src/retra/engines/: __init__.py  base.py  locked.py  single.py  snapshot.py
src/retra/internal/: __init__.py  clock.py  hashing.py  locks.py  sentinel.py
src/retra/keys/: __init__.py  canonical.py  exact.py  plans.py
src/retra/observability/: __init__.py  counters.py  events.py
src/retra/persistence/: __init__.py  checksum.py  envelope.py
src/retra/policies/: errors.py  eviction.py  expiration.py  freezing.py
src/retra/serializers/: __init__.py  json.py  pickle.py
src/retra/stores/: __init__.py  file.py  memory.py  sqlite.py  tiered.py
tests/: conftest.py
tests/contract/: test_backend_contract.py  test_store_contract.py
tests/integration/: test_concurrency.py  test_file_backend.py  test_generation_persistence.py  test_generation_race.py  test_memory_backend.py  test_persistence.py  test_sqlite_backend.py  test_tiered.py
tests/unit/: test_async_cache.py  test_cache.py  test_close_behavior.py  test_config.py  test_decorators.py  test_engines.py  test_entry.py  test_expiration.py  test_freezing.py  test_function_identity.py  test_generation.py  test_inline_coherence.py  test_json_serializer.py  test_keys.py  test_max_items.py  test_stats.py
