[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "retra"
version = "0.2.0a1"
description = "Retra: a precision-first, low-overhead cache and memoization library for Python."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Igor Souza" }]
keywords = ["cache", "memoization", "performance", "sqlite", "low-latency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "pyperf>=2.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "performance: non-functional performance checks",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "examples", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PIE"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["retra"]
mypy_path = "src"
warn_unused_ignores = true

[tool.coverage.run]
source = ["retra"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
